--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -7,28 +7,8 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v4.1.2
-    - name: set up JDK 17
-      uses: actions/setup-java@v4.1.0
-      with:
-        java-version: '17'
-        distribution: 'adopt'
-        cache: gradle
-
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
-
   test:
     runs-on: ubuntu-latest
-
-    needs: build
 
     steps:
     - uses: actions/checkout@v4.1.2
@@ -43,3 +23,22 @@ jobs:
       run: chmod +x gradlew
     - name: Run tests
       run: ./gradlew test
+
+  build:
+    runs-on: ubuntu-latest
+
+    needs: test
+
+    steps:
+    - uses: actions/checkout@v4.1.2
+    - name: set up JDK 17
+      uses: actions/setup-java@v4.1.0
+      with:
+        java-version: '17'
+        distribution: 'adopt'
+        cache: gradle
+
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+    - name: Build with Gradle
+      run: ./gradlew build
