--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -42,3 +42,10 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
+
+    - name: Create APK
+      uses: actions/upload-artifact@v3
+      with:
+        name: Parcial1.apk
+        path: app/build/outputs/apk/debug/app-debug.apk
+    
